adds calendar vierw of all appointmets for the day selected

--- a/cameronDuckettClientSchedule/cameronDuckettClientSchedule.csproj
+++ b/cameronDuckettClientSchedule/cameronDuckettClientSchedule.csproj
@@ -101,6 +101,7 @@
     <Compile Include="addAppointmentForm.Designer.cs">
       <DependentUpon>addAppointmentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Appointment.cs" />
     <Compile Include="updateAppointmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
