--- a/cameronDuckettClientSchedule/cameronDuckettClientSchedule.csproj
+++ b/cameronDuckettClientSchedule/cameronDuckettClientSchedule.csproj
@@ -102,6 +102,12 @@
       <DependentUpon>addAppointmentForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Appointment.cs" />
+    <Compile Include="reportsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="reportsForm.Designer.cs">
+      <DependentUpon>reportsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="updateAppointmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +171,9 @@
     <EmbeddedResource Include="Messages.fi.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Messages.fi.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="reportsForm.resx">
+      <DependentUpon>reportsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="updateAppointmentForm.resx">
       <DependentUpon>updateAppointmentForm.cs</DependentUpon>
